minor updates to week 9 lectures (mostly target=blank for hyperlinks)

--- a/course-materials/lecture-slides/lecture9.1-data-stories-slides.qmd
+++ b/course-materials/lecture-slides/lecture9.1-data-stories-slides.qmd
@@ -108,7 +108,7 @@ You have all listened to, read, and told stories (in this class, in other classe
 :::
 
 ::: {.footer}
-I also recommend watching [The Power in Effective Data Storytelling](https://www.youtube.com/watch?v=0e52QfQngrM), by [Malavica Sridhar](https://www.linkedin.com/in/malavica-sridhar/) and [Why Data Storytelling Matters to All of Us](https://www.youtube.com/watch?v=Js5UMbD9r5U), by [Jia Hwei Ng](https://www.linkedin.com/in/jiahweing/)
+I also recommend watching [The Power in Effective Data Storytelling](https://www.youtube.com/watch?v=0e52QfQngrM){target="_blank"}, by [Malavica Sridhar](https://www.linkedin.com/in/malavica-sridhar/){target="_blank"} and [Why Data Storytelling Matters to All of Us](https://www.youtube.com/watch?v=Js5UMbD9r5U){target="_blank"}, by [Jia Hwei Ng](https://www.linkedin.com/in/jiahweing/){target="_blank"}
 :::
 
 ---
@@ -599,7 +599,7 @@ knitr::include_graphics("images/week8/jan6.png")
 ```
 
 ::: {.center-text .body-text-s}
-[The Jan. 6 inquiry, by the numbers](https://twitter.com/nytimes/status/1743025807491027261) (New York Times)
+[The Jan. 6 inquiry, by the numbers](https://twitter.com/nytimes/status/1743025807491027261){target="_blank"} (New York Times)
 :::
 
 ---
@@ -615,7 +615,7 @@ knitr::include_graphics("images/week8/china-pop.png")
 ```
 
 ::: {.center-text .body-text-s}
-[China's population continues to shrink as deaths outnumber births](https://twitter.com/nytimes/status/1747729285329084482) (New York Times)
+[China's population continues to shrink as deaths outnumber births](https://twitter.com/nytimes/status/1747729285329084482){target="_blank"} (New York Times)
 :::
 
 ---
@@ -631,7 +631,7 @@ knitr::include_graphics("images/week8/can-fires.png")
 ```
 
 ::: {.center-text .body-text-s}
-[Wildfires in Canada burned this much land so far this year](https://twitter.com/prinzmagtulis/status/1693684342818574675) (Reuters)
+[Wildfires in Canada burned this much land so far this year](https://twitter.com/prinzmagtulis/status/1693684342818574675){target="_blank"} (Reuters)
 :::
 
 ---
@@ -647,7 +647,7 @@ knitr::include_graphics("images/week8/ca-oil.png")
 ```
 
 ::: {.center-text .body-text-s}
-['Catastrophic' California oil spill kills fish, damaages wetlands](https://twitter.com/ReutersGraphics/status/1445052808349241346) (Reuters)
+['Catastrophic' California oil spill kills fish, damaages wetlands](https://twitter.com/ReutersGraphics/status/1445052808349241346){target="_blank"} (Reuters)
 :::
 
 ---
@@ -663,7 +663,7 @@ knitr::include_graphics("images/week8/clean-fuel.png")
 ```
 
 ::: {.center-text .body-text-s}
-[Access to clean fuels and technologies for cooking](https://twitter.com/ReutersGraphics/status/1558098980831383552) (Reuters)
+[Access to clean fuels and technologies for cooking](https://twitter.com/ReutersGraphics/status/1558098980831383552){target="_blank"} (Reuters)
 :::
 
 ---
@@ -679,7 +679,7 @@ knitr::include_graphics("images/week8/cacti.png")
 ```
 
 ::: {.center-text .body-text-s}
-[Almost half of U.S. cacti are vulnerable to extinction](https://twitter.com/ReutersGraphics/status/1622631279282774016) (Reuters)
+[Almost half of U.S. cacti are vulnerable to extinction](https://twitter.com/ReutersGraphics/status/1622631279282774016){target="_blank"} (Reuters)
 :::
 
 ---
@@ -695,7 +695,7 @@ knitr::include_graphics("images/week8/messi.png")
 ```
 
 ::: {.center-text .body-text-s}
-[Lionel Messi: all 672 goals for Barcelona by season](https://twitter.com/ReutersGraphics/status/1424701147789541386) (Reuters)
+[Lionel Messi: all 672 goals for Barcelona by season](https://twitter.com/ReutersGraphics/status/1424701147789541386){target="_blank"} (Reuters)
 :::
 
 ---
@@ -711,7 +711,7 @@ knitr::include_graphics("images/week8/refugees.png")
 ```
 
 ::: {.center-text .body-text-s}
-[Refugees resettled in the United States](https://twitter.com/ReutersGraphics/status/1430289471426207745) (Reuters)
+[Refugees resettled in the United States](https://twitter.com/ReutersGraphics/status/1430289471426207745){target="_blank"} (Reuters)
 :::
 
 ---
@@ -727,7 +727,7 @@ knitr::include_graphics("images/week8/employed.png")
 ```
 
 ::: {.center-text .body-text-s}
-[How employed people spend their day](https://us.gestalten.com/blogs/journal/visualizing-a-new-new-york-times) (New York Times)
+[How employed people spend their day](https://us.gestalten.com/blogs/journal/visualizing-a-new-new-york-times){target="_blank"} (New York Times)
 :::
 
 ---
@@ -743,7 +743,7 @@ knitr::include_graphics("images/week8/mann-etal-hockey-stick.png")
 ```
 
 ::: {.center-text .body-text-s}
-["Hockey Stick" graph](https://en.wikipedia.org/wiki/Hockey_stick_graph_(global_temperature)), by [Mann et al. (1999)](https://doi.org/10.1029/1999GL900070)
+["Hockey Stick" graph](https://en.wikipedia.org/wiki/Hockey_stick_graph_(global_temperature){target="_blank"}), by [Mann et al. (1999)](https://doi.org/10.1029/1999GL900070){target="_blank"}
 :::
 
 ::: notes
@@ -820,7 +820,7 @@ To tell a clear story, you need to [**know your audience**]{.teal-text}
 
 
 ::: footer
-From [Cédric Scherer](https://www.cedricscherer.com/)'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk) and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) workshop
+From [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk){target="_blank"} and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop
 :::
 
 ---
@@ -858,7 +858,7 @@ knitr::include_graphics("images/week8/chalabi-vaquitas.png")
 ::::
 
 ::: {.footer}
-[Seven endangered species that could (almost) fit in a single train carriage](https://www.theguardian.com/environment/gallery/2018/sep/17/endangered-species-on-a-train), by [Mona Chalabi](https://monachalabi.com/) (two of seven shown here)
+[ endangered species that could (almost) fit in a single train carriage](https://www.theguardian.com/environment/gallery/2018/sep/17/endangered-species-on-a-train){target="_blank"}, by [Mona Chalabi](https://monachalabi.com/){target="_blank"} (two of seven shown here)
 :::
 
 ```{r}
@@ -879,7 +879,7 @@ countdown::countdown(
 
 ---
 
-## {#ingeman data-menu-title="Consider audience (Ingeman et al.)"} 
+## {#ingeman data-menu-title="Consider audience (Ingeman et al. 2022)"} 
 
 [Consider the audience]{.slide-title}
 
@@ -896,7 +896,7 @@ knitr::include_graphics("images/week8/ingeman-etal-fig3.png")
 <br>
 
 ::: {.footer}
-Fig. 3, by [Ingeman et al. 2022](https://www.nature.com/articles/s41598-022-13671-7): Glimmers of hope and critical cases. Find [figure caption online](https://www.nature.com/articles/s41598-022-13671-7/figures/3).
+Fig. 3, by [Ingeman et al. 2022](https://www.nature.com/articles/s41598-022-13671-7){target="_blank"}: Glimmers of hope and critical cases. Find [figure caption online](https://www.nature.com/articles/s41598-022-13671-7/figures/3){target="_blank"}.
 :::
 
 ```{r}
@@ -951,7 +951,7 @@ knitr::include_graphics("images/week8/scherer-plants.png")
 ::::
 
 ::: {.footer}
-[Plants in Danger](https://github.com/Z3tt/TidyTuesday/tree/main/plots/2020_34), by [Cédric Scherer](https://www.cedricscherer.com/) ([code](https://github.com/z3tt/TidyTuesday/blob/main/R/2020_34_ExtinctPlants.Rmd))
+[Plants in Danger](https://github.com/Z3tt/TidyTuesday/tree/main/plots/2020_34){target="_blank"}, by [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"} ([code](https://github.com/z3tt/TidyTuesday/blob/main/R/2020_34_ExtinctPlants.Rmd){target="_blank"})
 :::
 
 ```{r}
@@ -1014,7 +1014,7 @@ From [Cédric Scherer](https://www.cedricscherer.com/)'s talk, [Effective Data V
 
 This has less to do with the physical act of creating data viz / telling a story and everything to do with your own **critical examination of your data and domain expertise**. Two important reminders:
 
-:::: columns 
+:::: {.columns} 
 
 ::: {.column width="50%"}
 1. [**Our data is never a perfect reflection of the real world**]{.teal-text} -- our data is always a *sample*
@@ -1033,7 +1033,7 @@ knitr::include_graphics("images/week8/ny-rats-update.png")
 ::::
 
 ::: footer
-From [Cédric Scherer](https://www.cedricscherer.com/)'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk) and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) workshop
+From [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk){target="_blank"} and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop
 :::
 
 ---
@@ -1066,7 +1066,7 @@ knitr::include_graphics("images/week8/jones-book.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-[Avoiding Data Pitfalls](https://www.amazon.com/Avoiding-Data-Pitfalls-presenting-visualizations/dp/1119278163), by [Ben Jones](https://www.linkedin.com/in/benrjones/)
+[Avoiding Data Pitfalls](https://www.amazon.com/Avoiding-Data-Pitfalls-presenting-visualizations/dp/1119278163){target="_blank"}, by [Ben Jones](https://www.linkedin.com/in/benrjones/){target="_blank"}
 :::
 
 :::
@@ -1074,7 +1074,7 @@ knitr::include_graphics("images/week8/jones-book.png")
 ::::
 
 ::: footer
-From [Cédric Scherer](https://www.cedricscherer.com/)'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk) and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) workshop
+From [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}'s talk, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk){target="_blank"} and [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop
 :::
 
 
