--- a/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
+++ b/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
@@ -43,7 +43,7 @@ format:
 
 ## {#LA-map1 data-menu-title="LA map 1"} 
 
-[Can anyone take a guess at what this map depicts?]{.slide-title3}
+[What does this map depict?]{.slide-title}
 
 <hr>
 
@@ -76,15 +76,15 @@ knitr::include_graphics("images/week8/redlining-LA.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Source: [Mapping Inequality: Redlining in New Deal America (v3)](https://dsl.richmond.edu/panorama/redlining)
+Source: [Mapping Inequality: Redlining in New Deal America (v3)](https://dsl.richmond.edu/panorama/redlining){target="_blank"}
 :::
 :::
 
 ::: {.column width="50%"}
 - [**Redlining:** the practice of categorically withholding financial services, especially mortgages, from neighborhoods that have a significant number of racial or ethnic minorities]{.body-text-s}
-- [Between 1935-1940, the [Home Owners' Loan Corporation](https://en.wikipedia.org/wiki/Home_Owners'_Loan_Corporation) (HOLC) graded "residential security" (i.e. financial risk) of neighborhoods in most major metropolitan areas across the US]{.body-text-s}
+- [Between 1935-1940, the [Home Owners' Loan Corporation](https://en.wikipedia.org/wiki/Home_Owners'_Loan_Corporation){target="_blank"} (HOLC) graded "residential security" (i.e. financial risk) of neighborhoods in most major metropolitan areas across the US]{.body-text-s}
 - [Color-coded maps depict grades, where green represents the "best" neighborhoods and safest investments. Red represents "hazardous" neighborhoods and riskiest investments.]{.body-text-s}
-- [Neighborhoods earned a red grade if African Americans lived in it, even if it was a  middle-class neighborhood of single-family homes ([Rothstein 2017](https://en.wikipedia.org/wiki/The_Color_of_Law))]{.body-text-s}
+- [Neighborhoods earned a red grade if African Americans lived in it, even if it was a  middle-class neighborhood of single-family homes ([Rothstein 2017](https://en.wikipedia.org/wiki/The_Color_of_Law){target="_blank"})]{.body-text-s}
 :::
 
 ::::
@@ -116,7 +116,7 @@ knitr::include_graphics("images/week8/do-no-harm.png")
 ::: {.column width="50%"}
 
 ::: {.center-text}
-Urban Institute's [Do No Harm Guide](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf), by Jonathan Schwabish and Alice Feng (2021)
+Urban Institute's [Do No Harm Guide](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf){target="_blank"}, by Jonathan Schwabish and Alice Feng (2021)
 :::
 
 - [guidelines on **how to apply a DEI lens** to not just words, colors, icons, etc., but also the process of crafting communication products]{.body-text-s}
@@ -147,7 +147,7 @@ knitr::include_graphics("images/week8/andy-kirk.png")
 <br>
 
 ::: {.center-text .gray-text .body-text-s}
-Scheme by Andy Kirk from his book [Data Visualisation: A Handbook for Data Driven Design](https://visualisingdata.com/book/), recreated by Cédric Scherer
+Scheme by Andy Kirk from his book [Data Visualisation: A Handbook for Data Driven Design](https://visualisingdata.com/book/){target="_blank"}, recreated by Cédric Scherer
 :::
 
 ---
@@ -188,7 +188,7 @@ Discuss how you perceive, interpret, and comprehend this map with your learning 
 ::::
 
 ::: {.footer}
-The above map was recreated by folks at [The Correspondent](https://thecorrespondent.com/), based on migration maps commonly published by the European Border and Coast Guard Agency ([Frontex](https://www.frontex.europa.eu/)).
+The above map was recreated by folks at [The Correspondent](https://thecorrespondent.com/){target="_blank"}, based on migration maps commonly published by the European Border and Coast Guard Agency ([Frontex](https://www.frontex.europa.eu/){target="_blank"}).
 :::
 
 ```{r}
@@ -248,8 +248,8 @@ knitr::include_graphics("images/week8/map-original.png")
 :::
 
 ::: {.notes}
-- large direct arrows make it look as if migrants are heading straight for Europe, but many tkae a long, dangerous, and detour-filled journey.
-- "illegal border crossings" portrayts migrants as criminals. It does not show that asylum seekers have hardly any legal options to enter the EU
+- large direct arrows make it look as if migrants are heading straight for Europe, but many actually take a long, dangerous, and detour-filled journey.
+- "illegal border crossings" portrays migrants as criminals. It does not show that asylum seekers have hardly any legal options to enter the EU
 - appears to be a uniform group coming into Europe from the "great unknown"
 :::
 
@@ -295,7 +295,7 @@ Discuss how you might redesign this map to make us feel less
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ```{r}
@@ -349,7 +349,7 @@ knitr::include_graphics("images/week8/map-blue.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ---
@@ -387,7 +387,7 @@ knitr::include_graphics("images/week8/map-title.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ---
@@ -425,7 +425,7 @@ knitr::include_graphics("images/week8/map-blue-sm-arrows.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ---
@@ -463,7 +463,7 @@ knitr::include_graphics("images/week8/map-blue-circles.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ---
@@ -501,7 +501,7 @@ knitr::include_graphics("images/week8/2018-value.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ---
@@ -539,7 +539,7 @@ knitr::include_graphics("images/week8/migration-bar.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ::: {.notes}
@@ -581,7 +581,7 @@ knitr::include_graphics("images/week8/context-origins.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ---
@@ -619,7 +619,7 @@ knitr::include_graphics("images/week8/context-destinations.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ---
@@ -657,7 +657,7 @@ knitr::include_graphics("images/week8/europes-migration.png")
 ::::
 
 ::: {.footer}
-[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba), by Maite Vermulen, Leon De Korte, and Henk Van Houtum
+[How maps in the media make us more negative about migrants](https://thecorrespondent.com/664/how-maps-in-the-media-make-us-more-negative-about-migrants/738023272448-bac255ba){target="_blank"}, by Maite Vermulen, Leon De Korte, and Henk Van Houtum
 :::
 
 ---
@@ -706,7 +706,7 @@ Quotes from Vermulen, De Korte, and Van Houtum
 >[“the action of understanding, being aware of, being sensitive to, and vicariously experiencing the feelings, thoughts, and experience of another”]{.body-text-l}
 
 ::: {.right-align-text}
--[Merriam-Webster](https://www.merriam-webster.com/dictionary/empathy)
+-[Merriam-Webster](https://www.merriam-webster.com/dictionary/empathy){target="_blank"}
 :::
 
 . . . 
@@ -714,7 +714,7 @@ Quotes from Vermulen, De Korte, and Van Houtum
 <br>
 
 ::: {.center-text}
-The [Do No Harm Guide](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf) lists six themes for considering empathy as it applies to communicating data...
+The [Do No Harm Guide](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf){target="_blank"} lists six themes for considering empathy as it applies to communicating data...
 :::
 
 ---
@@ -737,7 +737,7 @@ The [Do No Harm Guide](https://www.urban.org/sites/default/files/publication/104
 >"if your data [are] about people, make it extremely clear who they are or were"
 
 ::: {.right-align-text}
--Jacob Harris in [Connecting with the Dots](https://source.opennews.org/articles/connecting-dots/)
+-Jacob Harris in [Connecting with the Dots](https://source.opennews.org/articles/connecting-dots/){target="_blank"}
 :::
 :::
 
@@ -750,7 +750,7 @@ knitr::include_graphics("images/week8/faces-of-death.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Each square represents US service member who died in Iraq or Afghanistan. Source: [Faces of Death](https://archive.nytimes.com/www.nytimes.com/interactive/us/faces-of-the-dead.html#/copes_gregory_t) (New York Times); (Note: this is an archived page and a bit glitchy)
+Each square represents US service member who died in Iraq or Afghanistan. Source: [Faces of Death](https://archive.nytimes.com/www.nytimes.com/interactive/us/faces-of-the-dead.html#/copes_gregory_t){target="_blank"} (New York Times); (Note: this is an archived page and a bit glitchy)
 :::
 :::
 ::::
@@ -776,7 +776,7 @@ Each square represents US service member who died in Iraq or Afghanistan. Source
 ::: {.column width="50%"}
 
 ::: {.center-text .body-text-s}
-Pair data-driven charts with personal stories, or help readers understand the ["far vs. near"](https://github.com/propublica/guides/blob/master/design-structure.md#far-vs-near) (i.e. overall metrics + smaller ranges / groups of data)
+Pair data-driven charts with personal stories, or help readers understand the ["far vs. near"](https://github.com/propublica/guides/blob/master/design-structure.md#far-vs-near){target="_blank"} (i.e. overall metrics + smaller ranges / groups of data)
 :::
 
 ```{r}
@@ -789,14 +789,14 @@ knitr::include_graphics("images/week8/deadly-baghdad.png")
 
 ::: {.center-text .body-text-s .gray-text}
 This map focuses on one of the deadliest days in Baghdad, with 114 separate episodes of violence resulting in the deaths of 160 Iraqi citizens and police officers | Source: [A Deadly Day
-In Baghdad](https://archive.nytimes.com/www.nytimes.com/interactive/2010/10/24/world/1024-surge-graphic.html?_r=0) (New York Times)
+In Baghdad](https://archive.nytimes.com/www.nytimes.com/interactive/2010/10/24/world/1024-surge-graphic.html?_r=0){target="_blank"} (New York Times)
 :::
 :::
 
 ::::
 
 ::: {.notes}
-These graphics illustrate a common and successful technique for bringing the reader back down to earth by focusing on a smaller range of data. In the case of Baghdad’s dead, we focused on a single day to show the near of what years of violence looked like day after day. ([Harris 2015](https://source.opennews.org/articles/connecting-dots/))
+These graphics illustrate a common and successful technique for bringing the reader back down to earth by focusing on a smaller range of data. In the case of Baghdad's dead, we focused on a single day to show the near of what years of violence looked like day after day. ([Harris 2015](https://source.opennews.org/articles/connecting-dots/){target="_blank"})
 :::
 
 ---
@@ -836,7 +836,7 @@ knitr::include_graphics("images/week8/ev-labels.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Mapping the theme of EV charging convenience, which was most tied to specific places. Above, transcript snippets around positive associations with convenience. | Source: [Attitudes and Experiences with Electric Vehicles](https://storymaps.arcgis.com/stories/e3b7605bc5624853aec7b5fa41de611f), by Diana Lavery
+Mapping the theme of EV charging convenience, which was most tied to specific places. Above, transcript snippets around positive associations with convenience. | Source: [Attitudes and Experiences with Electric Vehicles](https://storymaps.arcgis.com/stories/e3b7605bc5624853aec7b5fa41de611f){target="_blank"}, by Diana Lavery
 :::
 
 :::
@@ -844,7 +844,7 @@ Mapping the theme of EV charging convenience, which was most tied to specific pl
 ::::
 
 ::: {.footer}
-Check out [Mapping Quotes, Stories, Sentiments, and Experiences](https://www.esri.com/arcgis-blog/products/arcgis/mapping/mapping-quotes-stories-sentiments-and-experiences/), by Diana Lavery & Clinton Johnson, which explores the use of qualitative data to explore the complexities in peoples' behaviors, attitudes, and concerns.
+Check out [Mapping Quotes, Stories, Sentiments, and Experiences](https://www.esri.com/arcgis-blog/products/arcgis/mapping/mapping-quotes-stories-sentiments-and-experiences/){target="_blank"}, by Diana Lavery & Clinton Johnson, which explores the use of qualitative data to explore the complexities in peoples' behaviors, attitudes, and concerns.
 :::
 
 ::: {.notes}
@@ -894,14 +894,14 @@ knitr::include_graphics("images/week8/cpdp.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Explore reports by region and officer. | Source: [Citizens Police Data Project](https://cpdp.co/), by [Invisible Institute](https://invisible.institute/)
+Explore reports by region and officer. | Source: [Citizens Police Data Project](https://cpdp.co/){target="_blank"}, by [Invisible Institute](https://invisible.institute/){target="_blank"}
 :::
 :::
 
 ::::
 
 ::: {.footer}
-The [Citizens Police Data Project](https://cpdp.co/) is an interactive online database and dashboard that empowers anyone to explore and analyze police misconduct data from Chicago. [Trina Reynolds-Tyler](https://invisible.institute/trina-reynolds-tyler), Data Director at Invisible Institute, spoke about this work at [WiDS 2023](https://www.youtube.com/watch?v=auKddyW6vBA) (~1:05:00).
+The [Citizens Police Data Project](https://cpdp.co/){target="_blank"} is an interactive online database and dashboard that empowers anyone to explore and analyze police misconduct data from Chicago. [Trina Reynolds-Tyler](https://invisible.institute/trina-reynolds-tyler){target="_blank"}, Data Director at Invisible Institute, spoke about this work at [WiDS 2023](https://www.youtube.com/watch?v=auKddyW6vBA){target="_blank"} (begins ~1:05:00).
 :::
 
 ---
@@ -949,7 +949,7 @@ knitr::include_graphics("images/week8/trulia-crime.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Trulia crime map (San Francisco) | Source: [When the Designer Shows Up In the Design](https://www.propublica.org/article/when-the-designer-shows-up-in-the-design), by Lena V. Groeger (ProPublica)
+Trulia crime map (San Francisco) | Source: [When the Designer Shows Up In the Design](https://www.propublica.org/article/when-the-designer-shows-up-in-the-design){target="_blank"}, by Lena V. Groeger (ProPublica)
 :::
 
 :::
@@ -957,7 +957,7 @@ Trulia crime map (San Francisco) | Source: [When the Designer Shows Up In the De
 ::::
 
 ::: {.footer}
-Trulia removed it's crime tab in 2022 after Redfin spoke out against the practice: “[G]iven the long history of redlining and racist housing covenants in the United States there’s too great a risk of this inaccuracy reinforcing racial bias. We believe that Redfin–and all real estate sites–should not show neighborhood crime data.” | Source: [GeekWire](https://www.geekwire.com/2021/trulia-to-drop-neighborhood-crime-data-from-home-listings-after-redfin-speaks-out-against-practice/) | For more on biases in crime statistics, check out [Buil-Gil et al. (2021)](https://doi.org/10.1007/s11292-021-09457-y)
+Trulia removed it's crime tab in 2022 after Redfin spoke out against the practice: “[G]iven the long history of redlining and racist housing covenants in the United States there’s too great a risk of this inaccuracy reinforcing racial bias. We believe that Redfin–and all real estate sites–should not show neighborhood crime data.” | Source: [GeekWire](https://www.geekwire.com/2021/trulia-to-drop-neighborhood-crime-data-from-home-listings-after-redfin-speaks-out-against-practice/){target="_blank"} | For more on biases in crime statistics, check out [Buil-Gil et al. (2021)](https://doi.org/10.1007/s11292-021-09457-y){target="_blank"}
 :::
 
 ---
@@ -996,7 +996,7 @@ Trulia removed it's crime tab in 2022 after Redfin spoke out against the practic
 >“Rather than looking at where crimes are committed, we looked at where prisoners live, and the maps that resulted showed the urban costs of incarceration and suggested how those dollars might be better spent on investing in communities.”
 
 ::: {.right-align-text}
--[Laura Kurgan](https://www.arch.columbia.edu/faculty/195-laura-kurgan)
+-[Laura Kurgan](https://www.arch.columbia.edu/faculty/195-laura-kurgan){target="_blank"}
 :::
 :::
 
@@ -1009,7 +1009,7 @@ knitr::include_graphics("images/week8/mdb.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Source: [Million Dollar Blocks](https://c4sr.columbia.edu/projects/million-dollar-blocks), by Columbia's [Center for Spatial Research](https://c4sr.columbia.edu/) 
+Source: [Million Dollar Blocks](https://c4sr.columbia.edu/projects/million-dollar-blocks){target="_blank"}, by Columbia's [Center for Spatial Research](https://c4sr.columbia.edu/){target="_blank"} 
 :::
 
 :::
@@ -1067,7 +1067,7 @@ knitr::include_graphics("images/week8/accessibility.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Image sources: [NCEAS](https://www.nceas.ucsb.edu/sites/default/files/2022-06/Colorblind%20Safe%20Color%20Schemes.pdf), [Design102](https://design102.blog.gov.uk/2022/01/14/whats-the-alternative-how-to-write-good-alt-text/), [call focus](https://www.callfocus.ie/blog/post/7-reasons-to-forget-jargon-talk-the-customers-language)
+Image sources: [NCEAS](https://www.nceas.ucsb.edu/sites/default/files/2022-06/Colorblind%20Safe%20Color%20Schemes.pdf){target="_blank"}, [Design102](https://design102.blog.gov.uk/2022/01/14/whats-the-alternative-how-to-write-good-alt-text/){target="_blank"}, [call focus](https://www.callfocus.ie/blog/post/7-reasons-to-forget-jargon-talk-the-customers-language){target="_blank"}
 :::
 :::
 
@@ -1111,7 +1111,7 @@ knitr::include_graphics("images/week8/avg-female-height.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Source: Sabah Ibrahim ([@reina_sabah](https://twitter.com/reina_sabah)), on [X](https://twitter.com/reina_sabah/status/1291509085855260672?lang=en) (formerly known as Twitter)
+Source: Sabah Ibrahim ([@reina_sabah](https://twitter.com/reina_sabah){target="_blank"}), on [X](https://twitter.com/reina_sabah/status/1291509085855260672?lang=en){target="_blank"} (formerly known as Twitter)
 :::
 :::
 
@@ -1126,7 +1126,7 @@ knitr::include_graphics("images/week8/boomer.png")
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Source: [Design Your Way](https://www.designyourway.net/blog/when-infographics-go-bad-or-how-not-to-design-data-visualization/)
+Source: [Design Your Way](https://www.designyourway.net/blog/when-infographics-go-bad-or-how-not-to-design-data-visualization/){target="_blank"}
 :::
 :::
 ::::
@@ -1153,7 +1153,7 @@ Source: [Design Your Way](https://www.designyourway.net/blog/when-infographics-g
 >["Take AIM...**A**ggregate at **i**ntersections that **m**atter"]{.body-text-m}
 
 ::: {.right-align-text .body-text-s}
--[Clinton Johnson](https://www.esri.com/arcgis-blog/author/clinton_johnson/) in his keynote talk, *Toward an Equitable and Just Geography*, at the [2024 NCEAS Environmental Data Science Summit](https://eds-summit.github.io/)
+-[Clinton Johnson](https://www.esri.com/arcgis-blog/author/clinton_johnson/){target="_blank"} in his keynote talk, *Toward an Equitable and Just Geography*, at the [2024 NCEAS Environmental Data Science Summit](https://eds-summit.github.io/){target="_blank"}
 :::
 
 <br>
@@ -1162,7 +1162,7 @@ Source: [Design Your Way](https://www.designyourway.net/blog/when-infographics-g
 [Decisions on how to aggregate data begin with the data collection stage, and continue through the analytical and communication stages.]{.body-text-m}
 
 ::: {.footer}
-Looking for more? Check out [A primer on an intersectional approach to data](https://www.data4sdgs.org/sites/default/files/file_uploads/JN_1286_IDC_KP_Primer_8pp_A4.pdf), by [Global Partnership for Sustainable Development Data](https://www.data4sdgs.org/).
+Looking for more? Check out [A primer on an intersectional approach to data](https://www.data4sdgs.org/sites/default/files/file_uploads/JN_1286_IDC_KP_Primer_8pp_A4.pdf){target="_blank"}, by [Global Partnership for Sustainable Development Data](https://www.data4sdgs.org/){target="_blank"}.
 :::
 
 ---
@@ -1184,7 +1184,7 @@ knitr::include_graphics("images/week8/covid-unemployment.png")
 ```
 
 ::: {.footer}
-Source: [What Coronavirus Job Losses Reveal About Racism in America](https://projects.propublica.org/coronavirus-unemployment/), by Lena V. Groeger (ProPublica)
+Source: [What Coronavirus Job Losses Reveal About Racism in America](https://projects.propublica.org/coronavirus-unemployment/){target="_blank"}, by Lena V. Groeger (ProPublica)
 :::
 
 ---
@@ -1195,9 +1195,9 @@ Source: [What Coronavirus Job Losses Reveal About Racism in America](https://pro
 
 <hr>
 
-[The US Census Bureau's annual [American Community Survey](https://www.census.gov/programs-surveys/acs) collects social, economic, housing, and demographic data which help to inform how trillions of dollars in federal funds are distributed each year.]{.body-text-s}
+[The US Census Bureau's annual [American Community Survey](https://www.census.gov/programs-surveys/acs){target="_blank"} collects social, economic, housing, and demographic data which help to inform how trillions of dollars in federal funds are distributed each year.]{.body-text-s}
 
-[While the **official U.S. poverty rate in 2019 was 12.3%**, the plot below, by [Schwabish & Feng (2021)](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf) (figure 08) shows the **large variation** in estimated poverty rates for each of the 139 racial groups from the American Community Survey. The overall poverty rate for each major racial groupings are included as well.]{.body-text-s}
+[While the **official U.S. poverty rate in 2019 was 12.3%**, the plot below, by [Schwabish & Feng (2021)](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf){target="_blank"} (figure 08) shows the **large variation** in estimated poverty rates for each of the 139 racial groups from the American Community Survey. The overall poverty rate for each major racial groupings are included as well.]{.body-text-s}
 
 ```{r}
 #| eval: true
@@ -1226,7 +1226,7 @@ knitr::include_graphics("images/week8/Native-American-men.png")
 ```
 
 ::: {.footer}
-Source: [What Coronavirus Job Losses Reveal About Racism in America](https://projects.propublica.org/coronavirus-unemployment/), by Lena V. Groeger (ProPublica)
+Source: [What Coronavirus Job Losses Reveal About Racism in America](https://projects.propublica.org/coronavirus-unemployment/){target="_blank"}, by Lena V. Groeger (ProPublica)
 :::
 
 ---
@@ -1246,7 +1246,7 @@ knitr::include_graphics("images/week8/gender-identity-bad.png")
 ```
 
 ::: {.footer}
-Source: [Do No Harm Guide](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf), Figure 09 | I also encourage you to give [@theannalytical](https://www.instagram.com/theannalytical/?hl=en) a follow!!
+Source: [Do No Harm Guide](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf){target="_blank"}, Figure 09 | I also encourage you to give [@theannalytical](https://www.instagram.com/theannalytical/?hl=en){target="_blank"} a follow!!
 :::
 
 ---
@@ -1279,7 +1279,7 @@ Source: Screenshot from a UCSB-administered survey (Feb 2024)
 >"Collecting inclusive data and building inclusive tools and visualizations can make the experience better for all users." 
 
 ::: {.right-align-text .body-text-s}
-[Schwabish & Feng (2021)](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf)
+[Schwabish & Feng (2021)](https://www.urban.org/sites/default/files/publication/104296/do-no-harm-guide.pdf){target="_blank"}
 :::
 
 Some alternatives:
@@ -1333,7 +1333,7 @@ countdown::countdown(
 ```
 
 ::: {.footer}
-Source: [Data Humanism, The Revolution will be Visualized.](https://giorgialupi.com/data-humanism-my-manifesto-for-a-new-data-wold), by [Giorgia Lupi](https://giorgialupi.com/) | Also give her TED talk, [How we can find ourselves in data](https://www.ted.com/talks/giorgia_lupi_how_we_can_find_ourselves_in_data) a watch!
+Source: [Data Humanism, The Revolution will be Visualized.](https://giorgialupi.com/data-humanism-my-manifesto-for-a-new-data-wold){target="_blank"}, by [Giorgia Lupi](https://giorgialupi.com/){target="_blank"} | Also give her TED talk, [How we can find ourselves in data](https://www.ted.com/talks/giorgia_lupi_how_we_can_find_ourselves_in_data){target="_blank"} a watch!
 :::
 
 ---
@@ -1349,7 +1349,7 @@ Source: [Data Humanism, The Revolution will be Visualized.](https://giorgialupi.
 > "I started to work with data in 2010, 2011, and I saw that most of the approach to data at the time was very much based on a statistician’s background, and that’s fantastic. But I was also interested in using data myself as an anchoring point to tell stories. I thought that **there’s just more that we could do to actually represent our reality if we include context, anecdotal details, if we embrace the imperfections that are inherent to how we collect data**. And so, I started to just use these ideas in my practice, and I felt that I needed to just come up with an umbrella term for that. Data humanism was a good one, and **data humanism is an approach to data that tries to reconnect numbers to what they really stand for by adding less factual and more anecdotal information**."
 
 ::: {.right-align-text}
--[Giorgia Lupi](https://giorgialupi.com/about) in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story)
+-[Giorgia Lupi](https://giorgialupi.com/about){target="_blank"} in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story){target="_blank"}
 :::
 
 ---
@@ -1369,7 +1369,7 @@ knitr::include_graphics("images/week8/lupi-1380.png")
 ```
 
 ::: {.footer}
-Image Source: [1374 Days - My Journey with Long Covid / NYT Visual OpED](https://giorgialupi.com/1374-days-nyt-visual-oped) | Quote Source: [Giorgia Lupi](https://giorgialupi.com/about) in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story)
+Image Source: [1374 Days - My Journey with Long Covid / NYT Visual OpED](https://giorgialupi.com/1374-days-nyt-visual-oped){target="_blank"} | Quote Source: [Giorgia Lupi](https://giorgialupi.com/about){target="_blank"} in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story){target="_blank"}
 :::
 
 ---
@@ -1389,7 +1389,7 @@ knitr::include_graphics("images/week8/lupi-happy-data.png")
 ```
 
 ::: {.footer}
-<https://happy-data.co/>, A project by [Pentagram](https://www.pentagram.com/): Giorgia Lupi, with Ting Fang Cheng, Talia Cotton, Phil Cox, and Sarah Kay Miller
+[https://happy-data.co/](https://happy-data.co/){target="_blank"}, A project by [Pentagram](https://www.pentagram.com/){target="_blank"}: Giorgia Lupi, with Ting Fang Cheng, Talia Cotton, Phil Cox, and Sarah Kay Miller
 :::
 
 ---
@@ -1409,7 +1409,7 @@ knitr::include_graphics("images/week8/lupi-wfh.png")
 ```
 
 ::: {.footer}
-Source: [Happy Data](https://happy-data.co/work-from-home-benefits), by Giorgia Lupi, with Ting Fang Cheng, Talia Cotton, Phil Cox, and Sarah Kay Miller | Quote Source: [Giorgia Lupi](https://giorgialupi.com/about) in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story)
+Source: [Happy Data](https://happy-data.co/work-from-home-benefits){target="_blank"}, by Giorgia Lupi, with Ting Fang Cheng, Talia Cotton, Phil Cox, and Sarah Kay Miller | Quote Source: [Giorgia Lupi](https://giorgialupi.com/about){target="_blank"} in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story){target="_blank"}
 :::
 
 ---
@@ -1429,7 +1429,7 @@ knitr::include_graphics("images/week8/lupi-blm-search.gif")
 ```
 
 ::: {.footer}
-[Happy Data](https://happy-data.co/more-than-ever-people-are-searching-for), by Giorgia Lupi, with Ting Fang Cheng, Talia Cotton, Phil Cox, and Sarah Kay Miller | Quote Source: [Giorgia Lupi](https://giorgialupi.com/about) in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story)
+[Happy Data](https://happy-data.co/more-than-ever-people-are-searching-for){target="_blank"}, by Giorgia Lupi, with Ting Fang Cheng, Talia Cotton, Phil Cox, and Sarah Kay Miller | Quote Source: [Giorgia Lupi](https://giorgialupi.com/about){target="_blank"} in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story){target="_blank"}
 :::
 
 ---
@@ -1449,7 +1449,7 @@ knitr::include_graphics("images/week8/lupi-streets.png")
 ```
 
 ::: {.footer}
-[Happy Data](https://happy-data.co/open-streets-movement), by Giorgia Lupi, with Ting Fang Cheng, Talia Cotton, Phil Cox, and Sarah Kay Miller | Quote Source: [Giorgia Lupi](https://giorgialupi.com/about) in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story) 
+[Happy Data](https://happy-data.co/open-streets-movement){target="_blank"}, by Giorgia Lupi, with Ting Fang Cheng, Talia Cotton, Phil Cox, and Sarah Kay Miller | Quote Source: [Giorgia Lupi](https://giorgialupi.com/about){target="_blank"} in her interview with [Fast Company](https://www.fastcompany.com/91024446/pentagram-partner-giorgia-lupi-on-pie-charts-embracing-the-unknown-and-why-data-needs-a-story){target="_blank"} 
 :::
 
 <!-- --- -->
@@ -1495,7 +1495,7 @@ knitr::include_graphics("images/week8/chalabi-palestine3.png")
 ::::
 
 ::: {.footer}
-Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en), here in reverse order
+Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en){target="_blank"}, here in reverse order
 :::
 
 ```{r}
@@ -1550,7 +1550,7 @@ knitr::include_graphics("images/week8/chalabi-palestine2.png")
 ::::
 
 ::: {.footer}
-Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en), here in reverse order
+Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en){target="_blank"}, here in reverse order
 :::
 
 ```{r}
@@ -1612,7 +1612,7 @@ knitr::include_graphics("images/week8/chalabi-palestine1.png")
 ::::
 
 ::: {.footer}
-Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en), here in reverse order
+Screenshots taken on 2023-11-21 from [@monachalabi](https://www.instagram.com/monachalabi/?hl=en){target="_blank"}, here in reverse order
 :::
 
 ```{r}
@@ -1650,7 +1650,7 @@ knitr::include_graphics("images/week8/ipcc-half.png")
 <br>
 
 ::: {.footer}
-Source: The [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf), by the [Intergovernmental Panel on Climate Change](https://www.ipcc.ch/) (IPCC) | Also see [This visual shows how climate change will affect generations](https://www.washingtonpost.com/climate-environment/2023/03/21/climate-ipcc-report-temperatures-graphic/), by Kasha Patel (Washington Post)
+Source: The [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf){target="_blank"}, by the [Intergovernmental Panel on Climate Change](https://www.ipcc.ch/){target="_blank"} (IPCC) | Also see [This visual shows how climate change will affect generations](https://www.washingtonpost.com/climate-environment/2023/03/21/climate-ipcc-report-temperatures-graphic/){target="_blank"}, by Kasha Patel (Washington Post)
 :::
 
 ```{r}
@@ -1688,7 +1688,7 @@ knitr::include_graphics("images/week8/ipcc-full.png")
 <br>
 
 ::: {.footer}
-Source: The [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf), by the [Intergovernmental Panel on Climate Change](https://www.ipcc.ch/) (IPCC) | Also see [This visual shows how climate change will affect generations](https://www.washingtonpost.com/climate-environment/2023/03/21/climate-ipcc-report-temperatures-graphic/), by Kasha Patel (Washington Post)
+Source: The [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf){target="_blank"}, by the [Intergovernmental Panel on Climate Change](https://www.ipcc.ch/){target="_blank"} (IPCC) | Also see [This visual shows how climate change will affect generations](https://www.washingtonpost.com/climate-environment/2023/03/21/climate-ipcc-report-temperatures-graphic/){target="_blank"}, by Kasha Patel (Washington Post)
 :::
 
 ```{r}
