--- a/course-materials/week9.qmd
+++ b/course-materials/week9.qmd
@@ -19,7 +19,7 @@ knitr::include_graphics(here::here("images", "horst-eco-r4ds.png"))
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
 
-*No pre-class prep necessary this week!*
+*No required prep for this week's lecture!*
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
