--- a/course-materials/week8.qmd
+++ b/course-materials/week8.qmd
@@ -15,7 +15,7 @@ knitr::include_graphics(here::here("images", "observable.png"))
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep} 
 
-There's no required prep for this week's lecture!
+*No required prep for this week's lecture!*
 
 <!-- You will be able to make temporary edits to Allison's [Observable Notebook](https://observablehq.com/documentation/notebooks/) while in [Tinker mode](https://observablehq.com/documentation/collaboration/tinker-mode). If you'd like to save your changes, you may *optionally* [create a free starter account](https://observablehq.com/documentation/accounts-workspaces/accounts) (I chose to sign up using my GitHub credentials, but multiple options are provided), then [fork](https://observablehq.com/documentation/notebooks/forking) the [notebook](https://observablehq.com/@observablehq/eds-240-javascript-data-viz-follow). -->
 
@@ -42,7 +42,7 @@ There's no required prep for this week's lecture!
 - [Add JavaScript to your dataviz toolkit with Observable Plot: Learner Version](https://observablehq.com/@observablehq/r-ladies-observable-plot-feb-2023-learner-version){target="_blank"}, by Allison Horst & Ananya Roy -- materials from R-Ladies Santa Barbara meetup (2023-05-24)
 - [Intro to Observable Plot: Exploring Taylor Swift Songs with Observable Plot](https://github.com/tashapiro/intro-observable?tab=readme-ov-file){target="_blank"}, by Tanya Shapiro -- materials from R-Ladies Philly workshop (2023-11-09)
 - [Observable's D3 Gallery](https://observablehq.com/@d3/gallery){target="_blank"} -- more than 170 cool viz built with D3 (plus their code)
-- [1974…bird attacks?](){target="_blank"}, by Allison Horst -- a blog post that demos a whole bunch of cool skills, but perhaps most relevantly, data wrangling in R then data viz using Observable Plot (and how to do so in Quarto doc `{ojs}` cells)
+- [1974…bird attacks?](https://allisonhorst.github.io/posts/2022-10-14-bird-attacks/){target="_blank"}, by Allison Horst -- a blog post that demos a whole bunch of cool skills, but perhaps most relevantly, data wrangling in R then data viz using Observable Plot (and how to do so in Quarto doc `{ojs}` cells)
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
 Similar to last week's discussion, we'll be discussing progress on our data visualizations and providing constructive feedback to one another.  
