--- a/course-materials/week9.qmd
+++ b/course-materials/week9.qmd
@@ -49,15 +49,15 @@ Find your assigned slide from the correct Google Slide deck (see table, under th
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
-| Assignment Type | Assignment Title       | Date Assigned  | Date Due                   |
-|-----------------|------------------------|----------------|----------------------------|
-| EOC             | EOC (week 9)           | Mon 03/03/2025 | Mon 03/03/2025, 11:55pm PT |
-| HW              | Homework Assignment #4 | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT |
-: {.hover .bordered tbl-colwidths="[20,30,20,30]"}
-
-<!-- | Assignment Type | Assignment Title                                    | Date Assigned  | Date Due                  | -->
-<!-- |-----------------|-----------------------------------------------------|----------------|----------------------------| -->
-<!-- | EOC             | [EOC (week 9)](https://forms.gle/inz5JgcfDzWTCPqw6) | Mon 03/03/2025 | Mon 03/03/2025, 11:55pm PT | -->
-<!-- | HW              | [Homework Assignment #4](assignments/HW4.qmd)       | Mon 02/24/2025 | Tue 03/11/2025, 11:59pm PT | -->
+<!-- | Assignment Type | Assignment Title       | Date Assigned  | Date Due                   | -->
+<!-- |-----------------|------------------------|----------------|----------------------------| -->
+<!-- | EOC             | EOC (week 9)           | Mon 03/03/2025 | Mon 03/03/2025, 11:55pm PT | -->
+<!-- | HW              | Homework Assignment #4 | Tue 02/25/2025 | Tue 03/11/2025, 11:59pm PT | -->
 <!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"} -->
+
+| Assignment Type | Assignment Title                                    | Date Assigned  | Date Due                  |
+|-----------------|-----------------------------------------------------|----------------|----------------------------|
+| EOC             | [EOC (week 9)](https://forms.gle/inz5JgcfDzWTCPqw6) | Mon 03/03/2025 | Mon 03/03/2025, 11:55pm PT |
+| HW              | [Homework Assignment #4](assignments/HW4.qmd)       | Mon 02/24/2025 | Tue 03/11/2025, 11:59pm PT |
+: {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
